[gd_scene load_steps=6 format=1]

[ext_resource path="res://entities/explosion.gd" type="Script" id=1]
[ext_resource path="res://media/oil-drop.png" type="Texture" id=2]
[ext_resource path="res://media/dust-cloud-1.png" type="Texture" id=3]



[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 50.0

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.654971, 1 )
colors = ColorArray( 1, 1, 1, 1, 1, 1, 1, 0.936196, 1, 1, 1, 0.0765882 )

[node name="explosion" type="Area2D"]

transform/scale = Vector2( 2, 2 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 12
collision/mask = 14
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="oil_particles" type="Particles2D" parent="."]

config/amount = 15
config/lifetime = 1.5
config/process_mode = 1
config/texture = ExtResource( 2 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 10.0
params/spin_velocity = 0.7
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.9
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color_ramp = SubResource( 2 )

[node name="smoke" type="Particles2D" parent="."]

config/amount = 32
config/lifetime = 1.0
config/process_mode = 1
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 180.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.351562, 0.17355, 0.0164795, 0.76502 )

[node name="fire" type="Particles2D" parent="."]

visibility/blend_mode = 1
config/amount = 32
config/lifetime = 0.7
config/process_mode = 1
config/half_extents = Vector2( 9, 9 )
config/texture = ExtResource( 3 )
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.3
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.941406, 0.785923, 0.455994, 1 )

[connection signal="body_enter" from="." to="." method="_on_explosion_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_explosion_body_exit"]


